test/files/neg/t2773.check
t2773.scala:5: error: value x is not a member of C
  import c.x
         ^
t2773.scala:6: error: not found: value x
  println(x)
          ^
two errors found
